# E-Health-Care

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  clean.py  docker-compose.yml  dummyRow.csv  dummyRow_diabetes.csv  dummyRow_heart.csv  manage.py  model.h5  model.json  password.txt  pickle_model_diabetes.pkl  pickle_model_heart.pkl  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  main.yml
Disease/: local_email.py  settings.py  urls.py  wsgi.py
Health/: apps.py  decorators.py  forms.py  urls.py  views.py
admin/: apps.py
api/: admin.py  diseaseml.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_disease_symptom_3.py  0003_auto_20200601_1642.py
appointment/: admin.py  forms.py  models.py  urls.py  views.py
appointment/migrations/: 0001_initial.py  0002_auto_20210323_1647.py
assets/: script.js  style.css
assets/js/: chat.js
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
datasets/: Training.csv  Untitled.ipynb  dummyRowDisease.csv  model.json  model_check.h5  model_check.json  pickle_model_heart.pkl
doctor/: admin.py  apps.py  doctor_decorators.py  forms.py  models.py  mysignal.py  urls.py  views.py
finalyearproject/: pyvenv.cfg
patient/: Diabetes.py  __init__.py  admin.py  apps.py  forms.py  heart.py  image_block.py  models.py  patient_decorators.py  pneumonia.py  urls.py  views.py
roleadmin/: apps.py  decoratos.py  forms.py  urls.py  views.py
(+233 files in other folders)
