[project]
name = "e-health-care"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-cors-headers==3.11.0",
    "django-crispy-forms==1.14.0",
    "django-widget-tweaks==1.5.0",
    "django==2.2.28",
    "djangorestframework==3.13.1",
    "joblib==1.1.0",
    "matplotlib==3.9.1",
    "pandas==2.2.2",
    "python-memcached==1.62",
    "pytz==2024.1",
    "scikit-learn==1.0.2",
    "scipy==1.14.0",
    "tensorflow==2.17.0",
    "weasyprint==62.3",
]
